--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.datasource.url=jdbc:postgresql://localhost:5433/lojaki?autoreconnect=true
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+
+
+
+
+
+
+
+
+
 
