--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,14 @@
 			<version>3.12.0</version>
 		</dependency>
 		
+		
+			<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.12.10</version>
+		</dependency>
+		
 
 	</dependencies>
 
