--- a/pom.xml
+++ b/pom.xml
@@ -6,21 +6,26 @@
 
 
 	<parent>
-
-
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.6</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+	
 	<groupId>lojaki.lojavirtual</groupId>
 	<artifactId>lojaki</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>lojaki</name>
 	<description>Projeto API REST </description>
+	<packaging>jar</packaging>
+	
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -177,7 +182,7 @@
 			</plugin>
 		</plugins>
 
-
+		<finalName>lojaki</finalName>
 	</build>
 
 </project>
