--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/lojaki?autoreconnect=true
+spring.datasource.url=jdbc:postgresql://instancia-database-postgres-lojaki.c3y2mquwyy3b.sa-east-1.rds.amazonaws.com:5432/lojaki?autoreconnect=true
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=lg131001
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.platform=postgres
 spring.jpa.hibernate.ddl-auto=update
