Api de pagamento

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -32,6 +32,8 @@ server.servlet.encoding.force=true
 server.servlet.encoding.force-request=true
 server.servlet.encoding.force-response=true
 
+server.forward-headers-strategy=framework
+
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 #número máximo de milissegundos que um cliente aguardará por uma conexão
