--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,15 @@
 			<version>2.27</version>
 		</dependency>
 
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
