--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -79,6 +79,11 @@ spring.flyway.sql-migration-suffixes=.sql
 
 
 
+server.port=443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=lg131001
+server.ssl.key-store-type=PKCS12
 
 
 
