--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,19 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+				<dependency>
+					<groupId>com.google.code.gson</groupId>
+					<artifactId>gson</artifactId>
+					<version>2.10.1</version>
+				</dependency>
 
+
+		<dependency>
+			<groupId>jdev.mentoria.lojavirtual</groupId>
+			<artifactId>loja_virtual_mentoria</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
